[gd_scene load_steps=14 format=3 uid="uid://cqqtup7iaj4a5"]

[ext_resource type="Texture2D" uid="uid://bdrjank5no5k6" path="res://assets/ui/timer_icon.png" id="1_boqfv"]
[ext_resource type="Script" uid="uid://caglmxifrmfqt" path="res://ui/hud/player_hud.gd" id="1_p1j4b"]
[ext_resource type="FontFile" uid="uid://by5857nvvi54i" path="res://assets/fonts/dynapuff_variable_font.ttf" id="1_vlvns"]
[ext_resource type="Shader" uid="uid://dc5os084gj0fk" path="res://resources/shaders/texture_color_setter.gdshader" id="1_y2gd1"]
[ext_resource type="Texture2D" uid="uid://3u7mkydcuyd1" path="res://assets/ui/score_icon.png" id="3_y2gd1"]
[ext_resource type="Texture2D" uid="uid://clr77cy3b6f6j" path="res://assets/ui/obstacle_icon.png" id="4_p1j4b"]
[ext_resource type="Texture2D" uid="uid://43fwfw1410nf" path="res://assets/ui/fault_icon.png" id="5_3hb5n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hku2y"]
bg_color = Color(0.560784, 0.403922, 0.321569, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="ShaderMaterial" id="ShaderMaterial_p1j4b"]
shader = ExtResource("1_y2gd1")
shader_parameter/tex_color = Color(0.943359, 0.891769, 0.840179, 1)
shader_parameter/blend_amount = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_rygsu"]
font = ExtResource("1_vlvns")
font_size = 18
font_color = Color(1, 0.901961, 0.8, 1)
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3hb5n"]
shader = ExtResource("1_y2gd1")
shader_parameter/tex_color = Color(0.949219, 0.72298, 0.291069, 1)
shader_parameter/blend_amount = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tbnm7"]
shader = ExtResource("1_y2gd1")
shader_parameter/tex_color = Color(0.945098, 0.890196, 0.839216, 1)
shader_parameter/blend_amount = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ywd4t"]
shader = ExtResource("1_y2gd1")
shader_parameter/tex_color = Color(0.830078, 0.189686, 0.189686, 1)
shader_parameter/blend_amount = 1.0

[node name="PlayerHud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p1j4b")

[node name="ScorePanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.005
anchor_right = 0.5
anchor_bottom = 0.06
offset_left = -250.0
offset_top = 0.0560002
offset_right = 250.0
offset_bottom = -0.0240021
theme_override_styles/panel = SubResource("StyleBoxFlat_hku2y")

[node name="HBoxContainer" type="HBoxContainer" parent="ScorePanel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.05
anchor_right = 1.0
anchor_bottom = 0.95
offset_bottom = 1.14441e-05
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="TimeIcon" type="TextureRect" parent="ScorePanel/HBoxContainer"]
material = SubResource("ShaderMaterial_p1j4b")
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
texture = ExtResource("1_boqfv")
expand_mode = 1
stretch_mode = 5

[node name="TimeLabel" type="Label" parent="ScorePanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "00:00"
label_settings = SubResource("LabelSettings_rygsu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreIcon" type="TextureRect" parent="ScorePanel/HBoxContainer"]
material = SubResource("ShaderMaterial_3hb5n")
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
texture = ExtResource("3_y2gd1")
expand_mode = 1
stretch_mode = 5

[node name="ScoreLabel" type="Label" parent="ScorePanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "1000"
label_settings = SubResource("LabelSettings_rygsu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ObstacleIcon" type="TextureRect" parent="ScorePanel/HBoxContainer"]
material = SubResource("ShaderMaterial_tbnm7")
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
texture = ExtResource("4_p1j4b")
expand_mode = 1
stretch_mode = 5

[node name="ObstacleLabel" type="Label" parent="ScorePanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0/19"
label_settings = SubResource("LabelSettings_rygsu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="FaultsIcon" type="TextureRect" parent="ScorePanel/HBoxContainer"]
material = SubResource("ShaderMaterial_ywd4t")
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
texture = ExtResource("5_3hb5n")
expand_mode = 1
stretch_mode = 5

[node name="FaultsLabel" type="Label" parent="ScorePanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
label_settings = SubResource("LabelSettings_rygsu")
horizontal_alignment = 1
vertical_alignment = 1
